java 8 compatible
- make java 8 compatible
- clear searchList after edit/undo/redo
- clear undo/redo history after loading new file